--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,9 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Poetry
-  uses: abatilo/actions-poetry@v2
-  with:
-    poetry-version: "2.1.3"
+    - uses: abatilo/actions-poetry@v2
+      with: 
+      poetry-version: "2.1.3"
 
     - name: Install dependencies
       run: |
