--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,24 +13,32 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # ➊ Instalujemy dokładnie Python 3.11
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      # ➋ Instalujemy Poetry 2.1.3 (działa na Pythonie 3.11)
       - name: Set up Poetry
         uses: abatilo/actions-poetry@v2
         with:
-          poetry-version: "2.1.3"     # ← ta linia ma 10 spacji wcięcia
+          poetry-version: "2.1.3"
 
+      # ➌ Instalujemy zależności + pakiet
       - name: Install dependencies
-        run: |
-          poetry install --with dev
+        run: poetry install --with dev
 
+      # ➍ Lint
       - name: Ruff lint
-        run: |
-          poetry run ruff check src tests
+        run: poetry run ruff check src tests
 
+      # ➎ Testy
       - name: Pytest
-        run: |
-          poetry run pytest --cov=forest --cov-report=xml --cov-report=term
+        run: poetry run pytest --cov=forest --cov-report=xml --cov-report=term
 
-      - name: Upload coverage to summary
+      # ➏ Artefakt z pokryciem
+      - name: Upload coverage
         uses: actions/upload-artifact@v4
         with:
           name: coverage-xml
