--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{ include = "forest", from = "src" }]
 python = "^3.11"
 numpy = ">=2.3.2,<3.0.0"
 pandas = ">=2.3.1,<3.0.0"
+lightgbm = "^4.6.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.12.7"
