--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,13 @@ python = "^3.11"
 numpy = ">=2.3.2,<3.0.0"
 pandas = ">=2.3.1,<3.0.0"
 lightgbm = "^4.6.0"
+ta-lib = "*"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.12.7"
 pytest = "^8.4.1"
 pytest-cov = "^6.2.1"
+pre-commit = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -24,4 +26,6 @@ build-backend = "poetry.core.masonry.api"
 [tool.ruff]
 line-length = 120
 target-version = "py311"
+
+[tool.ruff.lint]
 extend-select = ["I"]
