--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ numpy = ">=2.3.2,<3.0.0"
 pandas = ">=2.3.1,<3.0.0"
 lightgbm = "^4.6.0"
 pandas-ta = "0.3.14b0"
+structlog = "^25.4.0"
+rich = "^14.1.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.12.7"
