--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "forest"
 version = "0.1.0"
 description = "FOREST 3.0 trading system"
-authors = ["TwojeImię"]
+authors = ["Dariusz Dubis"]
 readme = "README.md"
 packages = [{ include = "forest", from = "src" }]
 
