--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ lightgbm = "^4.6.0"
 pandas-ta = "0.3.14b0"
 structlog = "^25.4.0"
 rich = "^14.1.0"
+streamlit = "^1.35.0"
+plotly     = "^5.22.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.12.7"
@@ -31,3 +33,7 @@ target-version = "py311"
 
 [tool.ruff.lint]
 extend-select = ["I"]
+
+[tool.poetry.scripts]
+forest-dashboard = "forest.dashboard.app:main"
+
