--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ structlog = "^25.4.0"
 rich = "^14.1.0"
 streamlit = "^1.35.0"
 plotly     = "^5.22.0"
+tqdm = "^4.66.4"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.12.7"
