--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ rich = "^14.1.0"
 streamlit = "^1.35.0"
 plotly     = "^5.22.0"
 tqdm = "^4.66.4"
+joblib = "^1.5.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.12.7"
