--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ streamlit = "^1.35.0"
 plotly     = "^5.22.0"
 tqdm = "^4.66.4"
 joblib = "^1.5.1"
+onnxruntime = {version = "==1.18.0", optional = true}
+scikit-learn = {version = "^1.4", optional = true}
+skl2onnx = {version = "^1.16", optional = true}
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.12.7"
@@ -38,4 +41,8 @@ extend-select = ["I"]
 
 [tool.poetry.scripts]
 forest-dashboard = "forest.dashboard.app:main"
+
+[tool.poetry.extras]
+ml = ["onnxruntime", "scikit-learn", "skl2onnx"]
+
 
