--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ packages = [{ include = "forest", from = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-numpy = ">=2.3.2,<3.0.0"
+numpy = ">=1.24,<1.27"
 pandas = ">=2.3.1,<3.0.0"
 lightgbm = "^4.6.0"
-pandas-ta = "0.3.14b0"
+pandas-ta   = { version = "0.3.14b0", allow-prereleases = true }
 structlog = "^25.4.0"
 rich = "^14.1.0"
 streamlit = "^1.35.0"
