--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ streamlit = "^1.35.0"
 plotly     = "^5.22.0"
 tqdm = "^4.66.4"
 joblib = "^1.5.1"
+pydantic = ">=2.7,<3.0"
+pyyaml = ">=6.0.2,<7.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.12.7"
