--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,44 +2,68 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [ "**" ]
   pull_request:
-    branches: [main]
+    branches: [ "**" ]
+
+permissions:
+  contents: read
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  build:
+  lint-type-test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # ➊ Instalujemy dokładnie Python 3.11
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
 
-      # ➋ Instalujemy Poetry 2.1.3 (działa na Pythonie 3.11)
-      - name: Set up Poetry
-        uses: abatilo/actions-poetry@v2
+      - name: Install Poetry
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+
+      - name: Configure Poetry (no venv)
+        run: poetry config virtualenvs.create false
+
+      - name: Cache Poetry downloads
+        uses: actions/cache@v4
         with:
-          poetry-version: "2.1.3"
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-
 
-     # ➌ Instalujemy zależności + pakiet
-      - name: Install dependencies
-        run: poetry install --with dev
+      - name: Install project dependencies
+        run: |
+          if [ -f pyproject.toml ]; then
+            poetry install --no-interaction --no-ansi
+          elif [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            echo "No dependency file found"; exit 1
+          fi
 
-      # ➍ Lint
-      - name: Ruff lint
-        run: poetry run ruff check src tests
+      - name: Run pre-commit (ruff, itd.)
+        run: |
+          python -m pip install pre-commit
+          pre-commit run --all-files --show-diff-on-failure
 
-      # ➎ Testy
-      - name: Pytest
-        run: poetry run pytest --cov=forest --cov-report=xml --cov-report=term
+      - name: Type check (mypy)
+        run: |
+          python -m pip install mypy
+          mypy --ignore-missing-imports --install-types --non-interactive src
 
-      # ➏ Artefakt z pokryciem
-      - name: Upload coverage
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-xml
-          path: coverage.xml
+      - name: Run tests (pytest)
+        env:
+          PYTHONWARNINGS: ignore::DeprecationWarning
+        run: poetry run pytest -q
